New level management kit

--- a/index.html
+++ b/index.html
@@ -103,7 +103,13 @@
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a href="page-app-solarsystemar.html" class="nav-link">Solar System AR</a></li>
                             </ul>
-                        </li>                        
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="#" class="nav-link">Packages<i class="icon-arrow-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li class="nav-item"><a href="page-package-levelmanagementkit.html" class="nav-link">Level Management Kit</a></li>
+                            </ul>
+                        </li>                            
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link">Extras<i class="icon-arrow-down"></i></a>
                             <ul class="dropdown-menu">
