Added new low poly page

--- a/page-app-solarsystemar.html
+++ b/page-app-solarsystemar.html
@@ -107,6 +107,7 @@
                             <a href="#" class="nav-link">Packages<i class="icon-arrow-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item"><a href="page-package-levelmanagementkit.html" class="nav-link">Level Management Kit</a></li>
+                                <li class="nav-item"><a href="page-package-lowpolyweapons.html" class="nav-link">Low Poly Medieval Weapon Pack</a></li>
                             </ul>
                         </li>                            
                         <li class="nav-item dropdown">
